# humero-poc

./: pyproject.toml  settings.yaml
humero/: config.py  main.py
humero/.ipynb_checkpoints/: main-checkpoint.py
notebooks/: interface.ipynb
notebooks/.ipynb_checkpoints/: interface-checkpoint.ipynb
