[tool.poetry]
name = "humero-poc"
version = "0.1.0"
description = ""
authors = ["Artur Barbosa <arturbarbosa10@gmail.com>"]
readme = "README.md"
packages = [{include = "humero_poc"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
